--- a/index.html
+++ b/index.html
@@ -2,8 +2,13 @@
 <html>
 <head lang="en">
     <meta charset="UTF-8">
-    <title></title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="jquery.xslider是一个基于JQuery的图片滑动插件">
+    <meta name="author" content="xreztento@vip.sina.com">
+    <title>jquery.xslider - Demo page</title>
     <link href="css/bootstrap.min.css" type="text/css" rel="stylesheet">
+    <link href="css/bootstrap-responsive.css" type="text/css" rel="stylesheet">
+    <link href="css/docs.css" type="text/css" rel="stylesheet">
     <style>
         body{
             background-color: #efefef;
@@ -16,17 +21,137 @@
         }
     </style>
 </head>
-<body>
-<div id="slider-1" style="width: 90%;margin-right: auto; margin-left: auto; margin-bottom: 20px">
-    <a class="btn" id="left-1"><i class="glyphicon glyphicon-arrow-left"></i></a>
-    <a class="btn" id="right-1"><i class="glyphicon glyphicon-arrow-right"></i></a>
-    <a class="btn" id="play-1"><i class="glyphicon glyphicon-play-circle"></i></a>
+<body data-spy="scroll" data-target=".bs-docs-sidebar">
+
+<!-- Navbar
+  ================================================== -->
+<div class="navbar navbar-inverse navbar-fixed-top">
+
+    <nav id="bs-navbar" class="collapse navbar-collapse">
+        <ul class="nav navbar-nav">
+            <li>
+                <a href="#">案例</a>
+            </li>
+            <li>
+                <a href="#">下载</a>
+            </li>
+            <li>
+                <a href="#">GitHub</a>
+            </li>
+        </ul>
+    </nav>
 </div>
-<div id="slider-2" style="width: 90%;margin-right: auto; margin-left: auto; margin-bottom: 20px">
-</div>
-<div id="slider-3" style="width: 90%;margin-right: auto; margin-left: auto; margin-bottom: 20px">
-    <a class="btn" id="left-3"><i class="glyphicon glyphicon-arrow-left"></i></a>
-    <a class="btn" id="right-3"><i class="glyphicon glyphicon-arrow-right"></i></a>
+
+<!-- Subhead
+================================================== -->
+<header class="">
+
+        <div class="bs-docs-header" id="content" tabindex="-1">
+            <div class="container">
+                <h1>jquery.xslider</h1>
+                <p>基于JQuery的图片滑动插件。</p>
+                <div class="container">
+                    <div class="row">
+                        <div class="span9">
+                        </div>
+                        <div class="span3">
+                            <a href="https://github.com/smalot/bootstrap-datetimepicker/archive/master.zip" class="btn btn-success">下载 ZIP 包 &gt;</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+
+</header>
+
+
+<a href="https://github.com/smalot/bootstrap-datetimepicker"><img style="position: absolute; top: 0; right: 0; border: 0; z-index: 2000" src="img/forkme_right_red_aa0000.png" alt="Fork me on GitHub"></a>
+
+<div class="container">
+    <div class="row">
+        <div class="col-lg-2">
+            <nav class="bs-docs-sidebar hidden-print hidden-xs hidden-sm affix-top">
+                <ul class="nav bs-docs-sidenav">
+
+                    <li class="">
+                        <a href="#js-overview">概览</a>
+                    </li>
+                    <li class=""><a href="#transitions">过渡效果</a></li>
+                    <li>
+                        <a href="#affix">事件</a>
+                    </li>
+
+
+                </ul>
+                <a class="back-to-top" href="#top">
+                    返回顶部
+                </a>
+
+                <a href="#" class="bs-docs-theme-toggle" role="button">
+                    主题预览
+                </a>
+
+            </nav>
+
+        </div>
+
+        <div class="col-lg-10">
+            <!-- Overview
+            ================================================== -->
+            <section id="demo_1">
+                <div class="page-header">
+                    <h2>手动播放</h2>
+                </div>
+
+                <div>
+                    <div class="bs-docs-example">
+                        <p>One of the simpliest implementation is the component.</p>
+                        <div id="slider-1" style="width: 90%;margin-right: auto; margin-left: auto; margin-bottom: 20px">
+                            <a class="btn" id="left-1"><i class="glyphicon glyphicon-arrow-left"></i></a>
+                            <a class="btn" id="right-1"><i class="glyphicon glyphicon-arrow-right"></i></a>
+                            <a class="btn" id="play-1"><i class="glyphicon glyphicon-play-circle"></i></a>
+                        </div>
+                    </div>
+                    <pre class="prettyprint linenums prettyprinted" style=""><ol class="linenums"><li class="L0"><span class="tag">&lt;input</span><span class="pln"> </span><span class="atn">size</span><span class="pun">=</span><span class="atv">"16"</span><span class="pln"> </span><span class="atn">type</span><span class="pun">=</span><span class="atv">"text"</span><span class="pln"> </span><span class="atn">value</span><span class="pun">=</span><span class="atv">"2012-06-15 14:45"</span><span class="pln"> </span><span class="atn">readonly</span><span class="pln"> </span><span class="atn">class</span><span class="pun">=</span><span class="atv">"form_datetime"</span><span class="tag">&gt;</span></li><li class="L1"><span class="pln">&nbsp;</span></li><li class="L2"><span class="tag">&lt;script</span><span class="pln"> </span><span class="atn">type</span><span class="pun">=</span><span class="atv">"text/javascript"</span><span class="tag">&gt;</span></li><li class="L3"><span class="pln">    $</span><span class="pun">(</span><span class="str">".form_datetime"</span><span class="pun">).</span><span class="pln">datetimepicker</span><span class="pun">({</span><span class="pln">format</span><span class="pun">:</span><span class="pln"> </span><span class="str">'yyyy-mm-dd hh:ii'</span><span class="pun">});</span></li><li class="L4"><span class="tag">&lt;/script&gt;</span><span class="pln">            </span></li></ol></pre>
+                </div>
+            </section>
+
+
+            <section id="demo_2">
+                <div class="page-header">
+                    <h2>手动播放</h2>
+                </div>
+
+                <div>
+                    <div class="bs-docs-example">
+                        <p>One of the simpliest implementation is the component.</p>
+                        <div id="slider-2" style="width: 90%;margin-right: auto; margin-left: auto; margin-bottom: 20px">
+                        </div>
+                    </div>
+                    <pre class="prettyprint linenums prettyprinted" style=""><ol class="linenums"><li class="L0"><span class="tag">&lt;input</span><span class="pln"> </span><span class="atn">size</span><span class="pun">=</span><span class="atv">"16"</span><span class="pln"> </span><span class="atn">type</span><span class="pun">=</span><span class="atv">"text"</span><span class="pln"> </span><span class="atn">value</span><span class="pun">=</span><span class="atv">"2012-06-15 14:45"</span><span class="pln"> </span><span class="atn">readonly</span><span class="pln"> </span><span class="atn">class</span><span class="pun">=</span><span class="atv">"form_datetime"</span><span class="tag">&gt;</span></li><li class="L1"><span class="pln">&nbsp;</span></li><li class="L2"><span class="tag">&lt;script</span><span class="pln"> </span><span class="atn">type</span><span class="pun">=</span><span class="atv">"text/javascript"</span><span class="tag">&gt;</span></li><li class="L3"><span class="pln">    $</span><span class="pun">(</span><span class="str">".form_datetime"</span><span class="pun">).</span><span class="pln">datetimepicker</span><span class="pun">({</span><span class="pln">format</span><span class="pun">:</span><span class="pln"> </span><span class="str">'yyyy-mm-dd hh:ii'</span><span class="pun">});</span></li><li class="L4"><span class="tag">&lt;/script&gt;</span><span class="pln">            </span></li></ol></pre>
+                </div>
+            </section>
+
+            <section id="demo_3">
+                <div class="page-header">
+                    <h2>手动播放</h2>
+                </div>
+
+                <div>
+                    <div class="bs-docs-example">
+                        <p>One of the simpliest implementation is the component.</p>
+                        <div id="slider-3" style="width: 90%;margin-right: auto; margin-left: auto; margin-bottom: 20px">
+                            <a class="btn" id="left-3"><i class="glyphicon glyphicon-arrow-left"></i></a>
+                            <a class="btn" id="right-3"><i class="glyphicon glyphicon-arrow-right"></i></a>
+                        </div>
+                    </div>
+                    <pre class="prettyprint linenums prettyprinted" style=""><ol class="linenums"><li class="L0"><span class="tag">&lt;input</span><span class="pln"> </span><span class="atn">size</span><span class="pun">=</span><span class="atv">"16"</span><span class="pln"> </span><span class="atn">type</span><span class="pun">=</span><span class="atv">"text"</span><span class="pln"> </span><span class="atn">value</span><span class="pun">=</span><span class="atv">"2012-06-15 14:45"</span><span class="pln"> </span><span class="atn">readonly</span><span class="pln"> </span><span class="atn">class</span><span class="pun">=</span><span class="atv">"form_datetime"</span><span class="tag">&gt;</span></li><li class="L1"><span class="pln">&nbsp;</span></li><li class="L2"><span class="tag">&lt;script</span><span class="pln"> </span><span class="atn">type</span><span class="pun">=</span><span class="atv">"text/javascript"</span><span class="tag">&gt;</span></li><li class="L3"><span class="pln">    $</span><span class="pun">(</span><span class="str">".form_datetime"</span><span class="pun">).</span><span class="pln">datetimepicker</span><span class="pun">({</span><span class="pln">format</span><span class="pun">:</span><span class="pln"> </span><span class="str">'yyyy-mm-dd hh:ii'</span><span class="pun">});</span></li><li class="L4"><span class="tag">&lt;/script&gt;</span><span class="pln">            </span></li></ol></pre>
+                </div>
+            </section>
+
+        </div>
+    </div>
 </div>
 <script type="text/javascript" src="lib/jquery-1.11.1.min.js">
 </script>
@@ -43,11 +168,9 @@
                     showNum: 1,
                     mouseoverHandler: function (index) {//鼠标落在显示对象时的方法
                         $(this).css("margin", "-2px");
-                        //slider_1.pause();
                     },
                     mouseoutHandler: function (index) {//鼠标离开显示对象时的方法
                         $(this).css("margin", "0px");
-                        //slider_1.cycle(1000);
                     },
                     clickHandler: function (index) {
                         alert(index);
@@ -83,9 +206,9 @@
         var slider_2 = $('#slider-2').slider(
                 {
                     showedObject: ['image/1.jpg', 'image/2.jpg', 'image/3.jpg', 'image/4.jpg'],
-                    width: 900,
-                    height: 300,//整个控件div层的高度
-                    objectWidth: 450,//每个显示对象的宽度
+                    width: 720,
+                    height: 240,//整个控件div层的高度
+                    objectWidth: 360,//每个显示对象的宽度
                     showNum: 2,
                     mouseoverHandler: function (index) {//鼠标落在显示对象时的方法
                         $(this).css("margin", "-2px");
@@ -106,9 +229,9 @@
         var slider_3 = $('#slider-3').slider(
                 {
                     showedObject: ['image/1.jpg', 'image/2.jpg', 'image/3.jpg', 'image/4.jpg'],
-                    width: 1200,
-                    height: 300,//整个控件div层的高度
-                    objectWidth: 400,//每个显示对象的宽度
+                    width: 720,
+                    height: 160,//整个控件div层的高度
+                    objectWidth: 240,//每个显示对象的宽度
                     showNum: 3,
                     mouseoverHandler: function (index) {//鼠标落在显示对象时的方法
                         $(this).css("margin", "-2px");
