--- a/index.html
+++ b/index.html
@@ -24,33 +24,14 @@
         }
     </style>
 </head>
-<body data-spy="scroll" data-target=".bs-docs-sidebar">
-
-<!-- Navbar
-  ================================================== -->
-<div class="navbar navbar-inverse navbar-fixed-top">
-
-    <nav id="bs-navbar" class="collapse navbar-collapse">
-        <ul class="nav navbar-nav">
-            <li>
-                <a href="xslider.tempo-h5.cn">案例</a>
-            </li>
-            <li>
-                <a href="https://github.com/xreztento/xslider/archive/master.zip">下载</a>
-            </li>
-            <li>
-                <a href="https://github.com/xreztento/xslider">GitHub</a>
-            </li>
-        </ul>
-    </nav>
-</div>
+<body data-spy="scroll" data-offset="0" data-target=".bs-docs-sidebar">
 
 <!-- Subhead
 ================================================== -->
 
 
 <div class="bs-docs-header" id="content" tabindex="-1">
-    <div class="container" style="margin-top: 30px;">
+    <div class="container">
         <h1>jquery.xslider</h1>
 
         <p>基于JQuery的图片滑动插件。</p>
@@ -100,8 +81,8 @@
         <div class="col-lg-10">
             <!-- Overview
             ================================================== -->
-            <section class="bs-docs-section">
-                <h1 id="tooltips" class="page-header"><a class="anchorjs-link " href="#tooltips" aria-label="Anchor link for: tooltips" data-anchorjs-icon="" style="font-family: anchorjs-icons; font-style: normal; font-variant: normal; font-weight: normal; line-height: inherit; position: absolute; margin-left: -1em; padding-right: 0.5em;"></a>Tooltips <small>tooltip.js</small></h1>
+            <section id="tooltips" class="bs-docs-section">
+                <h1 class="page-header"><a class="anchorjs-link " href="#tooltips" aria-label="Anchor link for: tooltips" data-anchorjs-icon="" style="font-family: anchorjs-icons; font-style: normal; font-variant: normal; font-weight: normal; line-height: inherit; position: absolute; margin-left: -1em; padding-right: 0.5em;"></a>Tooltips <small>tooltip.js</small></h1>
                 <p>Inspired by the excellent jQuery.tipsy plugin written by Jason Frame; Tooltips are an updated version, which don't rely on images, use CSS3 for animations, and data-attributes for local title storage.</p>
                 <p>Tooltips with zero-length titles are never displayed.</p>
 
@@ -270,7 +251,7 @@
 </script>
 <script type="text/javascript">
     $(document).ready(function () {
-        $('body').scrollspy({ target: '.bs-docs-sidebar' }).on('activate.bs.scrollspy', function () {
+        $('body').scrollspy().on('activate.bs.scrollspy', function () {
 
         });
 
